<resources>
    <string name="app_name">Menhariya</string>
    <string name="setting"><Se>      </Se>tting</string>
    <string name="barcode">Barcode</string>
    <string name="share">Share</string>
    <string name="myaccount">MyAccount</string>
    <string name="logout">Log out</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="phoneno">Phone</string>
    <string name="password1">Password</string>
    <string name="passwordd">Password</string>
    <string name="level">level</string>
    <string name="plate">Plate</string>
    <string name="phonenumber">Phone</string>
    <string name="name">Name</string>
    <string name="Herreega">Bank Account</string>
    <string name="bankaccount">Sign Up</string>
    <string name="faq">Menharya FAQ</string>
    <string name="title_activity_maps">Map</string>
    <string name="pay">Pay</string>
    <string name="our_logo">Logo</string>
    <string name="login_text">Login</string>
    <string name="Register_text">Register Here</string>
    <string name="menhariya_text">Menhariya</string>
    <string name="email_hint">Email</string>
    <string name="uname">user name</string>
    <string name="user_name">User Name</string>
    <string-array name="cities">
        <item> Addis Ababa</item>
        <item> Adama</item>
        <item> Hawasa</item>
        <item>Bahir Dar</item>
        <item> Mekelle</item>
        <item> Samara </item>
        <item> Jigjiga </item>
        <item> Asella </item>
        <item> Bishoftu </item>
        <item> Arbaminch </item>
        <item> Ziway </item>
        <item> Waliso </item>
        <item> Ambo </item>
        <item> Nekemte </item>
        <item> Hosana</item>
        <item> Adigrat</item>
        <item> Gondar </item>
        <item> Debre Birhan</item>
        <item> Shashemene </item>
        <item> Asosa</item>
        <item> Gambela </item>
        <item> Harar </item>
        <item> Dire Dawa</item>
        <item> Butajira</item>
        <item> maki </item>
        <item> Baale</item>

    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="obout">Menhariya Transportation management sysytem.</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="licenseno">License No</string>
    <string name="workplace">Work Place</string>
</resources>
