<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgg"
    tools:context="com.example.ibra.project.LoginActivity">


    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"

        android:contentDescription="@string/our_logo"
        app:srcCompat="@mipmap/hello" />


    <EditText
        android:id="@+id/username_text"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_below="@+id/logo_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="#11000022"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/uname"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_below="@+id/username_text"
        android:layout_alignStart="@+id/username_text"
        android:layout_alignLeft="@+id/username_text"
        android:layout_marginTop="50dp"
        android:background="#11000022"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="18sp"

        />

    <android.support.v7.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_text"
                android:textColor="#fff"
                android:textSize="18sp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/logo_image"
        android:layout_alignLeft="@+id/logo_image"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:text="@string/Register_text"
        android:textColor="#fff"
        android:textSize="14sp" />

</RelativeLayout>
